# denoising

Sources_et_References/: DenoisingInRaytrace.txt
code/: README.md  render.py  render.sh
code/PythonApp/: custom_filter.py  custom_metrics.py  exec_model.py  lib.py  main.py  net.pth  requirements.txt  utils.py
code/Results/: README.md
code/Results/broken_p40_s200_b128_e60_m10-30-50/: net.pth
code/Results/p30_s250_b128_e60_m50-55/: net.pth
code/Results/p40_s200_b128_e60_m10-30-50/: net.pth
code/Results/p50_s250_b128_e80_m50-70/: net.pth
code/Results/p80_s200_b128_e60_m10-50/: net.pth
code/Results/p80_s200_b128_e60_m40-50/: net.pth
code/ffdnet/: dataset.py  prepare_patches.py  requirements.txt  test_ffdnet.py  train.py  utils.py
code/methodes_classiques/: CMakeLists.txt  main.cpp
